add status form

--- a/app/products.html
+++ b/app/products.html
@@ -831,12 +831,35 @@
                            </div>
 
                         </div>
+
                         <div class="ac filters-status">
                            <h3 class="ac-header">
                               <button type="button" class="ac-trigger products__trigger">СТАТУС</button>
                            </h3>
                            <div class="ac-panel">
-
+                              <form class="filters-form">
+                                 <div class="filters__form--container">
+                                    <label class="filter__status--label">
+                                       <input type="radio" class="check" name="status">
+                                       <span class="check-custom"></span>
+                                       <span class="filter-status">В НАЛИЧИИ</span>
+                                    </label>
+                                    <label class="filter__status--label">
+                                       <input type="radio" class="check" name="status">
+                                       <span class="check-custom"></span>
+                                       <span class="filter-status">ПОД ЗАКАЗ</span>
+                                    </label>
+                                 </div>
+                                 <div class="filters__form--btns">
+                                    <button type="submit" class="btn-reset filters__form--btn show-btn">ПОКАЗАТЬ</button>
+                                    <button type="reset" class="btn-reset filters__form--btn reset-btn">СБРОСИТЬ</button>
+                                 </div>
+                              </form>
+                              <div class="filters__info">
+                                 <p class="filters__info--descr">
+                                    Подберём аккумулятор и масло конкретно на ваш автомобиль. Цель нашего магазина — предложение широкого ассортимента товаров.
+                                 </p>
+                              </div>
                            </div>
                         </div>
                      </div>
