--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,9 @@
       <li>
          <a href="products.html">Продукты</a>
       </li>
+      <li>
+         <a href="magnum.html">Каталог магнум</a>
+      </li>
    </ul>
 </body>
 </html>
